<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">同城缘</string>
    <string name="app_name_number">缘号</string>
    <string name="about_app">关于同城缘</string>
    <string name="chat">消息</string>
    <string name="contacts">缘友</string>
    <string name="me">我</string>
    <string name="mime">我的</string>
    <string name="discover">发现</string>
    <string name="setting">设置</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="request_fail">请求失败</string>
    <string name="no_data_now">暂时还没数据哦</string>
    <string name="no_more">没有更多了</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="prompt">提示</string>
    <string name="clear">清空</string>
    <string name="sd_card_unavailable">SD不可用</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="send">发送</string>
    <string name="complete">完成</string>

    <string name="album">相册</string>
    <string name="explain">说明</string>
    <string name="recommended_friends">新的朋友</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">订阅号</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="my_posts">相册</string>
    <string name="comment">评论</string>
    <string name="click_zan">赞</string>
    <string name="collection">收藏</string>
    <string name="my_collection">我的收藏</string>
    <string name="note">笔记</string>

    <string name="wallet">钱包</string>
    <string name="card_bag">卡包</string>
    <string name="expression2">表情</string>
    <string name="moments">趣游</string>
    <string name="scan">扫一扫</string>
    <string name="shake2">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="games">游戏</string>
    <string name="search">搜索</string>
    <string name="countries_and_areas">国家和地区</string>
    <string name="passWord">密码</string>
    <string name="toast_network_unavailable">网络不可用，请打开网络设置</string>
    <string name="toast_network_error">网络错误，请检查网络设置</string>

    <string name="action_settings">Settings</string>

    <string name="menu_groupchat">发起群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_money">微趣支付</string>
    <string name="menu_add_friend">添加朋友</string>

    <string name="detail_info">详细资料</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="my_profile">个人信息</string>
    <string name="qr_card">二维码名片</string>
    <string name="modify_name">更改名字</string>
    <string name="search_result">搜索结果</string>
    <string name="add_friend">添加朋友</string>
    <string name="new_friends">新的朋友</string>
    <string name="crop_image">剪切图片</string>
    <string name="micro_chat">微信</string>

    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>

    <string name="instruction">当设计的UI与地图部分重叠时，设置地图的padding值,以防止UI遮挡</string>

    <string name="viewpager_indicator">%1$d/%2$d</string>


    <string name="Unlimited">不限</string>

    <string name="hometown">家乡</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="body_height">身高</string>
    <string name="weight">体重</string>
    <string name="avatar">头像</string>
    <string name="education">学历</string>
    <string name="income">收入</string>
    <string name="occupation">职业</string>
    <string name="emotion_state">情感状态</string>
    <string name="live_place">居住地</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>


</resources>
