<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/window_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/view_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_pressed_default"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="70.0dip"
                    android:layout_height="70.0dip"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/default_useravatar" />

                <TextView
                    android:id="@+id/tvNickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/ivAvatar"
                    android:textSize="18.0dip" />

                <TextView
                    android:id="@+id/tvUserName"
                    style="@style/txt_ContextStyle1"
                    android:layout_below="@+id/tvNickName"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/ivAvatar"
                    android:textSize="14.0dip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/right" />

                <ImageView
                    android:id="@+id/ivSex"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="14dp"
                    android:layout_toRightOf="@+id/tvNickName"
                    android:src="@drawable/ic_sex_female" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:divider="@drawable/divider_common"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/txt_album"
                    style="@style/TxtTitle"
                    android:drawableLeft="@drawable/icon_me_photo"
                    android:drawableRight="@drawable/right"
                    android:gravity="center_vertical"
                    android:text="@string/my_posts" />

                <TextView
                    android:id="@+id/txt_collect"
                    style="@style/TxtTitle"
                    android:drawableLeft="@drawable/icon_me_collect"
                    android:drawableRight="@drawable/right"
                    android:text="@string/collection" />

                <TextView
                    android:id="@+id/txt_money"
                    style="@style/TxtTitle"
                    android:background="@drawable/bg_pressed_default"
                    android:drawableLeft="@drawable/icon_me_money"
                    android:drawableRight="@drawable/right"
                    android:text="@string/wallet" />

                <TextView
                    android:id="@+id/txt_card"
                    style="@style/TxtTitle"
                    android:drawableLeft="@drawable/icon_me_card"
                    android:drawableRight="@drawable/right"
                    android:text="@string/card_bag" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_smail"
                style="@style/TxtTitle"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/icon_me_smail"
                android:drawableRight="@drawable/right"
                android:text="@string/expression2" />

            <TextView
                android:id="@+id/txt_setting"
                style="@style/TxtTitle"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/icon_me_setting"
                android:drawableRight="@drawable/right"
                android:text="@string/setting" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>